welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: type mismatch;
 found   : Double
 required: Int
  return  ((-1+Math.sqrt(1+4*num))/2.0)
                                  ^